--- a/.docker/xdebug/xdebug.ini
+++ b/.docker/xdebug/xdebug.ini
@@ -1,6 +1,10 @@
+xdebug.default_enable=1
 xdebug.remote_enable=1
 xdebug.remote_autostart=1
 xdebug.remote_connect_back=0
 xdebug.profiler_enable=0
-xdebug.remote_port=9001
+xdebug.remote_port=9002
 xdebug.remote_host=host.docker.internal
+xdebug.idekey=VSCODE
+xdebug.remote_handler=dbgp
+xdebug.remote_log=/usr/local/etc/php/xdebug.log
