--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,14 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Listen for XDebug",
             "type": "php",
             "request": "launch",
-            "port": 9001,
+            "port": 9002,
             "pathMappings": {
-                "/usr/src/queue": "."
+                "/usr/src/queue": "${workspaceFolder}"
             }
         },
         {
@@ -19,7 +17,7 @@
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
-            "port": 9001
+            "port": 9002
         }
     ]
 }
